# dr-tulu

agent/: README.md  pyproject.toml  requirements-linux.txt  requirements-mac.txt
agent/dr_agent/: utils.py
agent/dr_agent/dataset_utils/: load_dataset.py
agent/dr_agent/tool_interface/: mcp_tools.py
agent/scripts/: launch_chat.py
agent/workflows/: auto_search_sft.py
rl/open-instruct/: README.md  README_vllm_mac.md  crawl4ai_block_list.txt  pyproject.toml  requirements.txt  train_dr_tulu_mini_base_mac.sh
rl/open-instruct/open_instruct/: device_utils.py  grpo_fast.py  model_utils.py  utils.py
rl/open-instruct/open_instruct/tests/: test_device_utils.py
rl/open-instruct/open_instruct/tool_utils/: tool_vllm.py
rl/open-instruct/scripts/: vllm_mac_launcher.py
rl/open-instruct/train_local/: slurm_eval_webwalker_base.sh  slurm_eval_webwalker_trained.sh  slurm_test_local_bm25.sh  slurm_train_local_bm25_8gpu.sh
rl/open-instruct2/: README.md  README_memory_profiling.md  pyproject.toml
rl/open-instruct2/open_instruct2/: __init__.py  bootstrap.py  config.py  memory_profile.py  reference_vllm.py  rewards.py  runtime.py  train_grpo.py  trainer.py
