[project]
name = "open-instruct2"
version = "0.1.0"
description = "Single-process GRPO trainer with vLLM reference scoring and rubric rewards."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "datasets>=3.1.0",
  "numpy<2",
  "peft>=0.13.2",
  "psutil>=5.9.8",
  "pyyaml>=6.0.0",
  "requests>=2.31.0",
  "tensorboard>=2.18.0",
  "torch>=2.6.0",
  "transformers>=4.52.4",
]

[project.optional-dependencies]
tracking = ["wandb>=0.18.0"]
linux-gpu = ["vllm>=0.8.5.post1"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["open_instruct2*"]
